feat(csv): Add CSV Connector and introduce @Operation based Connectors (#4980)
* feat(csv): Add CSV Connector and introduce @Operation based Connectors

* feat(csv): Fix review findings

* feat(csv): Format code

* feat(csv): Reference the right icon

* feat(csv): Refactor and optimize @Operation reflection and invocation

* feat(csv): Refine invoker and simplify resolver code.

* feat(csv): Simplify method invocation

* feat(csv): Inject ObjectMapper into Connector factory

* feat(csv): Add support for single operation Connectors

* feat(csv): Remove jsonpath support for now

* feat(csv): Use empty array syntax for input variables in OutboundConnector annotation

* feat(csv): Extract reflection code into separate class

* feat(csv): Review findings
Bump CSV Connector runtime version
Use Keywords class for "operation" keyword

* feat(csv): Fix tests
Make Variable name is optional

* feat(csv): Fix element template generation

* feat(csv): Refine the element template and the csv writer

* feat(csv): Add tests when writing CSVs

* feat(csv): Refine return types.